sfdx-devops/force-app/main/default/objects/MyObject__c/MyObject__c.object-meta.xml
<CustomObject>
    <label>MyObject</label>
    <nameField>
        <label>MyObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MyObjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>