sfdx-devops/force-app/main/default/objects/MyObject__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>MyObjects</relationshipLabel>
    <relationshipName>MyObjects</relationshipName>
    <type>Lookup</type>
</CustomField>